<resources>
    <string name="app_name">eZyPasswordManager</string>
    <string name="id_passwords">Passwords</string>
    <string name="id_add">Add</string>
    <string name="id_check_your_existing_passwords">Check your existing passwords</string>
    <string name="add_your_custom_password">Add your custom password</string>
    <string name="id_generate">Generate</string>
    <string name="generate_new_random_password">Generate new random password</string>
    <string name="id_pin">Pin</string>
    <string name="id_change_application_pin_password">change application PIN password</string>
    <string name="id_backup">Backup</string>
    <string name="id_backup_your_passwords_online">Backup your passwords online</string>
    <string name="id_restore_your_saved_passwords">Restore your saved passwords</string>
    <string name="id_restore">Restore</string>
    <string name="id_mypasswords">My Passwords</string>
    <string name="id_empty_passwords">No Passwords Added</string>
    <string name="id_password">Password</string>
    <string name="id_password_title">Password Title</string>
    <string name="id_save">Save</string>
    <string name="id_password_saved">Password Saved!</string>
    <string name="id_enter_password_titl">Please Enter Password Title</string>
    <string name="id_enter_password">Please enter password</string>
    <string name="id_choose_category">Choose Category (Popular)</string>
    <string name="id_copy">Copy</string>
    <string name="id_password_copied">Password Copied</string>
    <string name="id_yes">Yes</string>
    <string name="id_no">No</string>
    <string name="id_enter_pin">Enter PIN</string>
    <string name="id_confirm_pin">Confirm PIN</string>
    <string name="id_old_pin">Old PIN</string>
    <string name="id_wrong_pin">Wrong PIN</string>
    <string name="id_mismatch">PIN mismatch</string>
    <string name="id_wrong_old_pin">Wrong Old PIN</string>
    <string name="id_pin_changed">PIN changed</string>
    <string name="id_change_pin">Change PIN</string>
    <string name="id_new_pin">New PIN</string>
    <string name="id_passwords_restored">Passwords Restored</string>
    <string name="id_no_backup_found">No backup found for your account</string>
    <string name="id_passwords_successfully_backed_up">Passwords Successfully Backed up</string>
    <string name="id_delete_confirmation_title">Delete?</string>
    <string name="id_delete_confirmation_message">Are you sure you want to delete?</string>
</resources>
