<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPasswordActivity">

    <RelativeLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"

        android:background="@color/id_green_color"
        >

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="50dp"
            android:id="@+id/btnBack"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                android:src="@drawable/backarrow"/>
        </com.balysv.materialripple.MaterialRippleLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:text="@string/id_mypasswords"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_below="@+id/toolBar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_password"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                 />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_password_title"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPasswordName"
                android:layout_width="match_parent"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:id="@+id/btnSave"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:foregroundGravity="center_horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_save"
                android:paddingLeft="20dp"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"
                android:background="@drawable/save_button_round"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />
        </com.balysv.materialripple.MaterialRippleLayout>


            <TextView
                android:layout_width="wrap_content"
                android:text="@string/id_choose_category"
                android:layout_marginTop="20dp"
                android:textSize="16dp"
                android:layout_height="wrap_content"></TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCategory"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            tools:listitem="@layout/category_item"
            android:layout_height="60dp"/>


    </LinearLayout>

    </LinearLayout>
</RelativeLayout>