<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/adsLayout"
        android:orientation="vertical"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        />
    <ScrollView
        android:id="@+id/mainLayoutScrollContainer"
        android:layout_width="match_parent"
        android:layout_below="@+id/adsLayout"
        android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutLine1"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">

           <androidx.cardview.widget.CardView
                android:id="@+id/btnPasswords"
                android:layout_width="150dp"
                android:layout_height="150dp"
                 android:layout_gravity="center"
               android:foregroundGravity="center"

               card_view:cardElevation="2dp"
               card_view:cardUseCompatPadding="true"
                android:layout_margin="5dp"
                >

               <LinearLayout
                   android:layout_width="match_parent"
                   android:orientation="vertical"
                   android:layout_height="match_parent">

                   <ImageView
                       android:layout_width="40dp"
                       android:layout_height="40dp"
                       android:layout_gravity="center_horizontal"
                       android:layout_marginTop="10dp"
                       android:src="@drawable/key"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:gravity="center_horizontal"
                       android:textSize="14dp"
                       android:layout_marginTop="10dp"
                       android:text="@string/id_passwords"
                       android:textColor="@android:color/black"
                       android:textStyle="italic"
                       android:layout_height="wrap_content"/>

                   <View
                       android:layout_width="match_parent"
                       android:layout_height="0.5dp"
                       android:layout_marginTop="10dp"
                       android:layout_marginLeft="15dp"
                       android:layout_marginRight="15dp"
                       android:background="@color/id_gray_color_app"/>

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:gravity="center_horizontal"
                       android:textSize="12dp"
                       android:layout_marginLeft="5dp"
                       android:layout_marginRight="5dp"
                       android:layout_marginTop="10dp"
                       android:text="@string/id_check_your_existing_passwords"
                       android:textColor="@android:color/darker_gray"
                       android:textStyle="italic"
                       android:layout_height="wrap_content"/>
               </LinearLayout>
            </androidx.cardview.widget.CardView>
            </com.balysv.materialripple.MaterialRippleLayout>


            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/btnAddNewPassword"
                android:layout_width="150dp"
                android:layout_height="150dp"
                card_view:cardElevation="2dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                card_view:cardUseCompatPadding="true"
                android:layout_margin="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/plus"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="14dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/id_add"
                        android:textColor="@android:color/black"
                        android:textStyle="italic"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/id_gray_color_app"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="12dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/add_your_custom_password"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="italic"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutLine2"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/btnGenerateNewPassword"
                android:layout_width="150dp"
                card_view:cardElevation="2dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                card_view:cardUseCompatPadding="true"
                android:layout_height="150dp"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/shuffle"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="14dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/id_generate"
                        android:textColor="@android:color/black"
                        android:textStyle="italic"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/id_gray_color_app"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/generate_new_random_password"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="italic"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/btnChangePin"
                android:layout_width="150dp"
                android:layout_height="150dp"
                card_view:cardElevation="2dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                card_view:cardUseCompatPadding="true"
                android:layout_marginStart="10dp"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
              >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/padlock"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="14dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/id_pin"
                        android:textColor="@android:color/black"
                        android:textStyle="italic"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/id_gray_color_app"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/id_change_application_pin_password"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="italic"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_margin="15dp"
            android:layout_height="wrap_content">

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_weight="0.5"

                android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/btnBackupPasswords"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true"
                android:layout_margin="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/backup"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="14dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/id_backup"
                        android:textColor="@android:color/black"
                        android:textStyle="italic"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/id_gray_color_app"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/id_backup_your_passwords_online"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="italic"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:layout_width="wrap_content"
                android:layout_weight="0.5"

                android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/btnRestorePasswords"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                card_view:cardElevation="2dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                card_view:cardUseCompatPadding="true"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/restore"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="14dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/id_restore"
                        android:textColor="@android:color/black"
                        android:textStyle="italic"
                        android:layout_height="wrap_content"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/id_gray_color_app"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:textSize="12dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/id_restore_your_saved_passwords"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="italic"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>